with links to tasks

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 	<title>Salik's Public Website</title>
 </head>
 <body>
-	<h1>Salik's Public Website</h1>
+<h1>Salik's Public Website</h1>
+<ul>
+	<li><a href="Flexbox/index.html">Task Flexbox</a></li>
+	<li><a href="Task 1/index.html">Task HTML</a></li>
+	<li><a href="Task 2/index.html">Task CSS</a></li>
+	<li><a href="Task 4 JS/index.html">Task JS Video Script</a></li>
+</ul>
 </body>
 </html>
