--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<li><a href="Flexbox/index.html">Task Flexbox</a></li>
 	<li><a href="Task 1/index.html">Task HTML</a></li>
 	<li><a href="Task 2/index.html">Task CSS</a></li>
-	<li><a href="Task 4 JS/index.html">Task JS Video Script</a></li>
+	<li><a href="Task 4 JS/index.html">Task JS Visual Studio Script</a></li>
 </ul>
 </body>
 </html>
