--- a/Flexbox/index.html
+++ b/Flexbox/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My Website Flexbox</title>
-	<link rel="stylesheet" type="text/css" href="webstyle.css">
+	<link rel="stylesheet" type="text/css" href="Flexbox/css/style.css">
 </head>
 <body>
 	<header id="main-header">
