--- a/Task 2/index.html
+++ b/Task 2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>My Website</title>
-	<link rel="stylesheet" type="text/css" href="webstyle.css">
+	<link rel="stylesheet" type="text/css" href="Task 2/css/style.css">
 </head>
 <body>
 	<header id="main-header">
