--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<li><a href="Task 1/index.html">Task HTML</a></li>
 	<li><a href="Task 2/index.html">Task CSS</a></li>
 	<li><a href="Task 4 JS/index.html">Task JS Visual Studio Script</a></li>
+	<li><a href="Task 5 Video Landing Page/index.html">Task Video Landing Page</a></li>
 </ul>
 </body>
 </html>
