--- a/Task 5 - Video Landing Page/index.html
+++ b/Task 5 - Video Landing Page/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Salik's Landing Page</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
             <div class="toggle"></div>
         </header>
 
-        <video src="sunrise.mp4" muted loop autoplay></video>
+        <video src="css/video/sunrise.mp4" muted loop autoplay></video>
 
         <div class="overlay"></div>
 
